# ttrek

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  Dockerfile  build-ttrek.sh  install.sh  mkimg.tcl  readme.md  start.sh
docker/: Dockerfile.alpine  readme.md
docs/: help_general.txt  help_install.txt  help_uninstall.txt
examples/sample-session/: app.tcl
examples/simple/: example-best-with-router.tcl
registry/: abseil-cpp-20230125.0.sh  aws-sdk-cpp-1.11.157.sh  aws-sdk-tcl-latest.sh  curl-8.7.1.sh  ksuid-tcl-1.0.3.sh  openssl-3.2.1.sh  tcl-9.0b1.sh  tdom-0.9.3.sh  thtml-latest.sh  tink-cc-2.1.1.sh  tsession-latest.sh  twebserver-latest.sh  zlib-1.3.1.sh
registry/abseil-cpp/20230125.0/: install.sh  ttrek.json
registry/abseil-cpp/20230802.1/: install.sh  ttrek.json
registry/aws-sdk-cpp/1.11.157/: install.sh  ttrek.json
registry/aws-sdk-tcl/1.0.3/: install.sh  ttrek.json
registry/curl/8.7.1/: install.sh  ttrek.json
registry/ksuid-tcl/1.0.3/: install.sh  ttrek.json
registry/openssl/3.2.1/: install.sh  ttrek.json
registry/protobuf/21.9/: install.sh  ttrek.json
registry/tcl/9.0b1/: install.sh  ttrek.json
registry/tdom/0.9.3/: install.sh  ttrek.json
registry/thtml/1.0.0/: install.sh  ttrek.json
registry/tink-cc/2.1.1/: install.sh  ttrek.json
registry/tink-tcl/2.1.1/: install.sh  ttrek.json
registry/tink-tcl/20240401.0/: install.sh  ttrek.json
registry/tsession/1.0.2/: install.sh  ttrek.json
registry/twebserver/1.47.15/: install.sh  ttrek.json
registry/zlib/1.3.1/: install.sh  ttrek.json
scripts/: main.tcl
scripts/tcl_library/ttrek/: pkgIndex.tcl  ttrek.tcl  ttrek_helper.tcl
src/: PackageDatabase.h  Range.h  base64.h  bootstrap.sh  bootstrap_common_dynamic.sh  common.c  common.h  downloadSubCmd.c  helpSubCmd.c  initSubCmd.c  installSubCmd.c  install_common_dynamic.sh  install_common_static.sh  installer.c  installer.h  listSubCmd.c  pretendSubCmd.c  pretendSubCmd.cc  registry.c  registry.h  runSubCmd.c  scriptsSubCmd.c  subCmdDecls.h  ttrek.c  ttrek_build.c  ttrek_buildInstructions.c  ttrek_buildInstructions.h  ttrek_genInstall.c  ttrek_genInstall.h  ttrek_git.c  ttrek_git.h  ttrek_help.c  ttrek_help.h  ttrek_help_messages.h  ttrek_resolvo.cc  ttrek_resolvo.h  ttrek_scripts.c  ttrek_scripts.h  ttrek_telemetry.c  ttrek_telemetry.h  (+6 more)
src/base64/: cdecode.c  cdecode.h  cencode.c  cencode.h
src/fsmonitor/: fsmonitor.c  fsmonitor.h
src/minisat/: Solver.cc  Solver.h  SolverTypes.h
src/minisat/utils/: Options.cc  Options.h
src/resolvo/: CMakeLists.txt  Common.h  DisplayClause.h  DisplayDecisionMap.h  DisplaySolvable.h  DisplayUnsat.h  DisplayWatches.h  Pool.h  Problem.h  Range.h  Solvable.h
src/resolvo-cpp/: CMakeLists.txt
src/resolvo-cpp-port/tests/: solver.h
src/resolvo-cpp/tests/: solve.cc
src/resolvo/internal/: Arena.h  ArenaId.h  CandidatesId.h  ClauseId.h  DependenciesId.h  FrozenMap.h  LearntClauseId.h  NameId.h  SolvableId.h  StringId.h  VersionSetId.h  tracing.h
src/resolvo/solver/: Clause.h  Decision.h  DecisionMap.h  DecisionTracker.h  PropagationError.h  Solver.h  SolverCache.h  UnsolvableOrCancelled.h  WatchMap.h
src/resolvo/tests/: solver.h  test_resolvo.cc
src/sat-solver/: CMakeLists.txt  Range.h  ttrek_resolvo.cc
src/sat-solver/tests/: solve.cc
toolchain/: alpine.cmake
